--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,17 @@ Type: Package
 Title: Bagging of Density Estimators
 Version: 0.1.0
 Author: Mathias Bourel
-Maintainer: Jairo Cugliari <Jairo.Cugliari@univ-lyon2.fr>
-Description: density estimators by averaging classical density estimators.
-License: What license is it under?
-Encoding: 
+Maintainer: Jairo Cugliari <Jairo.Cugliari@univ-lyon2.fr> ,Youla Mohamed <m.youla@yahoo.fr>
+Description: density estimation by averaging classical density estimators such as 
+             the histogram, the frequency polygon and the kernel density estimators
+             obtained over different bootstrap samples of the original data.
+License: GPL-3
+Encoding: utf-8
 LazyData: true
 RoxygenNote: 6.1.1
+Imports: 
+    ks,
+    benchden,
+    caTools,
+    rpart,
+    nor1mix
