--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,14 +9,14 @@ Authors@R: c(
            ),
     person("Youla", "Mohamed", email = "m.youla@yahoo.fr" ,role ="aut")
     )
-Maintainer: Jairo Cugliari <Jairo.Cugliari@univ-lyon2.fr> ,Youla Mohamed <m.youla@yahoo.fr>
+Maintainer: Jairo Cugliari <Jairo.Cugliari@univ-lyon2.fr>, Youla Mohamed <m.youla@yahoo.fr>
 Description: density estimation by averaging classical density estimators such as 
              the histogram, the frequency polygon and the kernel density estimators
              obtained over different bootstrap samples of the original data.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
 Imports: 
     benchden,
     caTools,
@@ -24,5 +24,5 @@ Imports:
     nor1mix,
     rpart,
     stats,
-    delt
-    
+    delt,
+    sm
