--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(Bagkde)
 export(KDE)
 export(KDEtr)
 export(ash_err)
+export(baseboot)
 export(bropt)
 export(error)
 export(error2)
@@ -23,6 +24,11 @@ export(predict_hist)
 export(rash)
 export(rash_err)
 export(rashfp_err)
+export(tube_KDE)
+export(tube_KDEsm)
+export(tube_fp)
+export(tube_hist)
+export(tube_wass)
 import(graphics)
 import(ks)
 import(nor1mix)
