--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Authors@R: c(
 Maintainer: Jairo Cugliari <Jairo.Cugliari@univ-lyon2.fr>
 Description: Density estimation by averaging classical density estimators such as 
              the histogram, the frequency polygon and the kernel density estimators
-             obtained over different bootstrap samples of the original data.
+             obtained over different bootstrap samples of the original data. 
+             See Bourel and Cugliari (2019) <doi:10.1007/s00180-019-00889-9> for details.
 License: GPL-3
 Encoding: UTF-8
 RoxygenNote: 7.1.2
